--- a/stay-orgainised/public/index.html
+++ b/stay-orgainised/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="icon" href="%PUBLIC_URL%/logo.webp" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
